[package]
name = "vartrix"
version = "1.1.18"
authors = ["Ian Fiddes <ian.t.fiddes@gmail.com>", "Patrick Marks <patrick@10xgenomics.com>"]
edition = "2018"

[dependencies]
bio = ">=0.29"
rust-htslib = ">=0.36"
csv = "1"
failure = "0.1.5"
sprs = "*"
clap = "*"
rayon = "1.2"
terminal_size = "*"
human-panic = "1.0.1"
simplelog = "0.5.0"
log = "*"
tempfile = "*"
itertools = "0.6"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }

[profile.release]
debug = 1
lto = true
